# lygen

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/license/: generator.rs  mod.rs
