[package]
name = "lygen"
version = "0.1.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT or Apache-2.0"
description = "Common Software License Generator"
readme = "README.md"
homepage = "https://github.com/Tyrannican/lygen"
repository = "https://github.com/Tyrannican/lygen"
keywords = ["cli", "utility", "license"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
