[package]
name = "lygen"
version = "1.0.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Common Software License Generator"
readme = "README.md"
homepage = "https://github.com/Tyrannican/lygen"
repository = "https://github.com/Tyrannican/lygen"
keywords = ["cli", "utility", "license"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
